Adding more slides

--- a/index.html
+++ b/index.html
@@ -130,6 +130,79 @@
 						</p>
 					</section>
 				</section>
+				<section>
+					<section>
+						<h3> Software Development Cycles </h3>
+						<ul>
+							<li> Requirements gathering
+							<li> Functional Specification
+							<li> Initial Development Phase
+							<li> Release Cycle
+									<ul>
+										<li> Testing
+										<li> Addressing Issues
+										<li> Release Software
+										<li> Repeat
+									</ul>
+								</li>
+							</ul>
+						</section>
+						<section>
+							<h3> A few things to keep in mind when developing software </h3>
+							<ul class="r-fit-text">
+								<li> Elegant is the enemy of good
+								<li> Testing, testing, testing, testing...
+								<li> Performance is the second step, not the first
+								<li> Planning is a good thing
+								<li> Pick the right tool for the job
+								<li> Don't be afraid to use other people's work
+								<li> Invest early in version control (Git)
+								<li> Just because you are doing scientific software development,
+									   doesn't mean you get to make crappy code
+							</ul>
+						</section>
+						<section>
+							<h3> A few things to think about when developing as a team </h3>
+							<ul class="r-fit-text">
+								<li> Establish rules for group development based on best practices
+									<ul>
+										<li> Code reviews
+										<li> Testing procedures (automated testing)
+										<li> Coding standards (that are enforced)
+										<li> Documentation requirements
+									</ul>
+								<li> Spend time up front on setting up the collaborative environment
+								<li> Spend time creating a contribution plan and software philosophy
+								<li> Adopt a software development project management (Scrum, Agile, DevOps)
+							</ul>
+						</section>
+				</section>
+				<section>
+					<section>
+						<img class="r-stretch" src="static/images/bridges-2.png">
+					</section>
+					<section>
+						<img class="r-stretch" src="static/images/B-2-stuff.png">
+					</section>
+					<section>
+						<img class="r-stretch" src="static/images/B-2-filesystem.png">
+					</section>
+					<section>
+						<img class="r-stretch" src="static/images/B-2-packages.png">
+					</section>
+					<section>
+						<img class="r-stretch" src="static/images/B-2-ondemand.png">
+					</section>
+				</section>
+
+				<section>
+					<h3> Assignments for next class </h3>
+					<ul class="r-fit-text">
+						<li> Sign-up for a GitHub Account
+						<li> Sign-up for an XSEDE account at <a href="https://portal.xsede.org"> https://portal.xsede.org </a>
+						<li> Send me an email at <a href="mailto:stbrown@andrew.cmu.edu"> stbrown @ andrew.cmu.edu </a> with your Github and XSEDE user name
+					</ul>
+				</section>
 			</div>
 		</div>
 
