fixing misage sources

--- a/index.html
+++ b/index.html
@@ -179,24 +179,24 @@
 				</section>
 				<section>
 					<section>
-						<img class="r-stretch" src="static/images/bridges-2.png">
+						<img class="r-stretch" src="static/images/Bridges-2.PNG">
 					</section>
 					<section>
-						<img class="r-stretch" src="static/images/B-2-stuff.png">
+						<img class="r-stretch" src="static/images/B-2-stuff.PNG">
 					</section>
 					<section>
-						<img class="r-stretch" src="static/images/B-2-filesystem.png">
+						<img class="r-stretch" src="static/images/B-2-filesystem.PNG">
 					</section>
 					<section>
-						<img class="r-stretch" src="static/images/B-2-packages.png">
+						<img class="r-stretch" src="static/images/B-2-packages.PNG">
 					</section>
 					<section>
-						<img class="r-stretch" src="static/images/B-2-ondemand.png">
+						<img class="r-stretch" src="static/images/B-2-ondemand.PNG">
 					</section>
 				</section>
 
 				<section>
-					<h3> Assignments for next class </h3>
+					<h3> Assignments for next class (not graded)</h3>
 					<ul class="r-fit-text">
 						<li> Sign-up for a GitHub Account
 						<li> Sign-up for an XSEDE account at <a href="https://portal.xsede.org"> https://portal.xsede.org </a>
