--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 				</section>
 				<section>
 					<section>
-						<img class="r-stretch" src="static/images/Bridges-2.PNG">
+						<img class="r-stretch" src="static/images/Bridges-2.png">
 					</section>
 					<section>
 						<img class="r-stretch" src="static/images/B-2-stuff.PNG">
