--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			<div class="slides">
 				<section id="titleSlide">
 					<h2> Modern Programming for Data Analytics - Course Overview </h2>
-					<h4> Instructor: Shawn T. Brown </h4>
+					<h4> Instructor: Shawn T. Brown, PhD. </h4>
 				</section>
 				<section>
 					<section>
