Fixing errant link.

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 					<section>
 						<h3>Getting a GitHub account (if you don't already have a GitHub account):</h3>
 						<ol>
-							<li>Go to <a href="github.com" target="_blank">github.com</a>
+							<li>Go to <a href="http://github.com" target="_blank">github.com</a>
 							<li>Click "Sign Up" at the top right
 							<li>Go through the process
 							<li>Send your GitHub user name to <a href="mailto:stbrown@andrew.cmu.edu">stbrown@andrew.cmu.edu</a>
